--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ h2 {
   padding: 20px 0;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-row-gap: 40px;
+  grid-row-gap: 60px;
   overflow-y: scroll;
 }
 
@@ -193,20 +193,53 @@ h2 {
 
 .movie__prev {
   width: 200px;
+  height: 360px;
   position: relative;
 }
 
 .movie__poster {
+  position: relative;
   width: 200px;
   height: 300px;
   margin-bottom: 15px;
   box-shadow: 0 0 30px 10px #1A2125FF;
+  cursor: pointer;
+}
+
+.movie__poster:hover .movie__descr {
+  opacity: 1;
+  transition: 0.5s;
 }
 
 .movie__poster-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.movie__descr {
+  opacity: 0;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 118, 127, 0.8);
+  transition: 0.2s;
+}
+
+.movie__director, .movie__crew {
+  font-size: 25px;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.movie__year {
+  font-size: 18px;
 }
 
 .movie__rating {
