--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -87,7 +87,7 @@
     padding: 20px 0
     display: grid
     grid-template-columns: repeat(4, 1fr)
-    grid-row-gap: 40px
+    grid-row-gap: 60px
     overflow-y: scroll
     &::-webkit-scrollbar
       width: 5px
@@ -100,16 +100,42 @@
 .movie
   &__prev 
     width: 200px
+    height: 360px
     position: relative
   &__poster 
+    position: relative
     width: 200px
     height: 300px
     margin-bottom: 15px
     box-shadow: 0 0 30px 10px #1A2125FF
+    cursor: pointer
+    &:hover 
+      .movie__descr 
+        opacity: 1
+        transition: 0.5s
     &-img
       width: 100%
       height: 100%
       object-fit: cover 
+  &__descr 
+    opacity: 0
+    position: absolute
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background-color: rgba(#ff767f, 0.8)
+    transition: 0.2s
+  &__director, &__crew
+    font-size: 25px
+    color: #fff
+    margin-bottom: 10px
+  &__year 
+    font-size: 18px
   &__rating 
     position: absolute
     display: flex
