--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ h2 {
 
 .movies {
   width: 1400px;
-  height: 1000px;
+  height: 1050px;
   background-color: #fff;
   box-shadow: 0 0 35px 5px #222B31FF;
 }
@@ -115,7 +115,7 @@ h2 {
 }
 
 .main {
-  height: 940px;
+  height: 990px;
   display: flex;
 }
 
@@ -163,20 +163,21 @@ h2 {
 
 .content {
   width: 1150px;
-  padding: 40px 50px;
+  padding: 40px 20px;
   background-color: #222B31FF;
 }
 
 .content__title {
-  margin-bottom: 35px;
+  margin: 0 0 30px 35px;
 }
 
 .content__list {
-  height: 780px;
+  height: 850px;
   padding: 20px 0;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-row-gap: 60px;
+  grid-row-gap: 68px;
+  justify-items: center;
   overflow-y: scroll;
 }
 
@@ -202,7 +203,7 @@ h2 {
   width: 200px;
   height: 300px;
   margin-bottom: 15px;
-  box-shadow: 0 0 30px 10px #1A2125FF;
+  box-shadow: 0 0 20px #1A2125FF;
   cursor: pointer;
 }
 
@@ -228,18 +229,25 @@ h2 {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 118, 127, 0.8);
+  padding: 20px;
+  background-color: rgba(255, 118, 127, 0.9);
   transition: 0.2s;
 }
 
 .movie__director, .movie__crew {
   font-size: 25px;
-  color: #fff;
-  margin-bottom: 10px;
+  color: #ffffff;
+  margin-bottom: 12px;
+  text-align: center;
+}
+
+.movie__crew {
+  font-size: 18px;
 }
 
 .movie__year {
   font-size: 18px;
+  margin-bottom: 10px;
 }
 
 .movie__rating {
