--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -1,6 +1,6 @@
 .movies 
   width: 1400px 
-  height: 1000px
+  height: 1050px
   background-color: #fff
   box-shadow: 0 0 35px 5px #222B31FF
   &__header 
@@ -41,7 +41,7 @@
       color: #fff
 
 .main 
-  height: 940px
+  height: 990px
   display: flex
 
 .menu 
@@ -78,16 +78,17 @@
 
 .content 
   width: 1150px
-  padding: 40px 50px 
+  padding: 40px 20px 
   background-color: #222B31FF
   &__title 
-    margin-bottom: 35px
+    margin: 0 0 30px 35px 
   &__list 
-    height: 780px
+    height: 850px
     padding: 20px 0
     display: grid
     grid-template-columns: repeat(4, 1fr)
-    grid-row-gap: 60px
+    grid-row-gap: 68px
+    justify-items: center
     overflow-y: scroll
     &::-webkit-scrollbar
       width: 5px
@@ -107,7 +108,7 @@
     width: 200px
     height: 300px
     margin-bottom: 15px
-    box-shadow: 0 0 30px 10px #1A2125FF
+    box-shadow: 0 0 20px#1A2125FF
     cursor: pointer
     &:hover 
       .movie__descr 
@@ -128,14 +129,19 @@
     left: 0
     width: 100%
     height: 100%
-    background-color: rgba(#ff767f, 0.8)
+    padding: 20px
+    background-color: rgba(#ff767f, 0.9)
     transition: 0.2s
   &__director, &__crew
     font-size: 25px
-    color: #fff
-    margin-bottom: 10px
+    color: #ffffff
+    margin-bottom: 12px
+    text-align: center
+  &__crew 
+    font-size: 18px
   &__year 
     font-size: 18px
+    margin-bottom: 10px
   &__rating 
     position: absolute
     display: flex
