--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -77,13 +77,14 @@
 
 
 .content 
+  position: relative
   width: 1150px
   padding: 40px 20px 
   background-color: #222B31FF
   &__title 
     margin: 0 0 30px 35px 
   &__list 
-    height: 850px
+    height: 870px
     padding: 20px 0
     display: grid
     grid-template-columns: repeat(4, 1fr)
@@ -93,11 +94,35 @@
     &::-webkit-scrollbar
       width: 5px
       border-radius: 30px
-      background-color: #191C1FFF
     &::-webkit-scrollbar-thumb
       border-radius: 30px
       background-color: #ff767f
-          
+  &__loading 
+    position: absolute
+    display: none
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    top: 0
+    left: 0
+    width: 100% 
+    height: 100%
+    background: rgba(#191c1f, 0.8)
+    z-index: 1
+    &-text 
+      font-size: 30px
+      font-weight: 600
+    &-icon 
+      width: 100px 
+      height: 100px
+      background-image: url("data:image/svg+xml,%3Csvg xml:space='preserve' viewBox='0 0 100 100' y='0px' x='0px' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns='http://www.w3.org/2000/svg' id='圖層_1' version='1.1' style='height: 100%25; width: 100%25; background: transparent;' width='200px' height='200px'%3E%3Cg class='ldl-scale' style='transform-origin: 50%25 50%25; transform: rotate(0deg) scale(0.8, 0.8);'%3E%3Cg class='ldl-ani'%3E%3Cg class='ldl-layer'%3E%3Cg class='ldl-ani'%3E%3Cg%3E%3Cg class='ldl-layer'%3E%3Cg class='ldl-ani' style='transform: scale(0.91); transform-origin: 50px 50px; '%3E%3Cpath d='M32.4,36C18.1,51.8,4.1,69.5,21.8,87.5' stroke-miterlimit='10' stroke-linejoin='round' stroke-linecap='round' stroke-width='3.5' stroke='%23333333' fill='none' style='stroke: rgb(51, 51, 51);'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3Cg class='ldl-layer'%3E%3Cg class='ldl-ani' style='transform: scale(0.91); transform-origin: 50px 50px; '%3E%3Ccircle r='22.5' cy='50' cx='50' stroke-miterlimit='10' stroke-linejoin='round' stroke-linecap='round' stroke-width='3.5' stroke='%23333333' fill='%23919293' style='fill: rgb(145, 146, 147); stroke: rgb(51, 51, 51);'%3E%3C/circle%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3Cg class='ldl-layer'%3E%3Cg class='ldl-ani' style='transform: scale(0.91); transform-origin: 50px 50px; '%3E%3Cpath d='M50,12.5c-20.7,0-37.5,16.8-37.5,37.5S29.3,87.5,50,87.5S87.5,70.7,87.5,50S70.7,12.5,50,12.5z M65.7,32.3c3.6-2.1,8.2-0.8,10.2,2.7 c2.1,3.6,0.8,8.2-2.7,10.2s-8.2,0.8-10.2-2.7C60.9,38.9,62.1,34.3,65.7,32.3z M34.3,67.7c-3.6,2.1-8.2,0.8-10.2-2.7 c-2.1-3.6-0.8-8.2,2.7-10.2c3.6-2.1,8.2-0.8,10.2,2.7C39.1,61.1,37.9,65.7,34.3,67.7z M37,42.5c-2.1,3.6-6.7,4.8-10.2,2.7 S21.9,38.6,24,35c2.1-3.6,6.7-4.8,10.2-2.7C37.9,34.3,39.1,38.9,37,42.5z M50,80c-4.1,0-7.5-3.4-7.5-7.5S45.9,65,50,65 s7.5,3.4,7.5,7.5S54.1,80,50,80z M45,50c0-2.8,2.2-5,5-5s5,2.2,5,5s-2.2,5-5,5S45,52.8,45,50z M50,35c-4.1,0-7.5-3.4-7.5-7.5 S45.9,20,50,20s7.5,3.4,7.5,7.5S54.1,35,50,35z M76,65c-2.1,3.6-6.7,4.8-10.2,2.7s-4.8-6.7-2.7-10.2c2.1-3.6,6.7-4.8,10.2-2.7 C76.8,56.8,78.1,61.4,76,65z' stroke-miterlimit='10' stroke-linejoin='round' stroke-linecap='round' stroke-width='3.5' stroke='%23333333' fill='%23D2D2D3' style='fill: rgb(210, 210, 211); stroke: rgb(51, 51, 51);'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3Cmetadata xmlns:d='https://loading.io/stock/'%3E%3Cd:name%3Efilm%3C/d:name%3E%3Cd:tags%3Emovie,video,tape,cinestrip,strip,file,clip%3C/d:tags%3E%3Cd:license%3Eby%3C/d:license%3E%3Cd:slug%3Ekuvuhl%3C/d:slug%3E%3C/metadata%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+      background-size: cover
+      animation: loading-animation
+      animation-duration: 1.2s
+      animation-iteration-count: infinite
+      animation-timing-function: linear
+
+
 .movie
   &__prev 
     width: 200px
@@ -165,3 +190,12 @@
     font-size: 16px 
     font-weight: 600
     color: #87A9C0FF
+
+
+@keyframes loading-animation
+  0%
+    transform: scale(1) rotate(0)
+  50% 
+    transform: scale(1.3) rotate(180deg)
+  100% 
+    transform: scale(1) rotate(360deg)
