--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,9 @@ h2 {
 }
 
 .menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 250px;
   padding: 30px 0;
   background-color: #191C1FFF;
@@ -160,6 +163,13 @@ h2 {
   font-size: 30px;
   color: #596065FF;
   transition: 0.3s;
+}
+
+.menu__divider {
+  width: 90%;
+  height: 1px;
+  margin: 30px auto;
+  background-color: #777777;
 }
 
 .content {
@@ -310,6 +320,44 @@ h2 {
   color: #87A9C0FF;
 }
 
+.movie__filter {
+  width: 200px;
+}
+
+.movie__filter-single {
+  margin-bottom: 20px;
+}
+
+.movie__filter-check {
+  padding: 5px 0;
+}
+
+.movie__filter-check input {
+  margin-right: 10px;
+}
+
+.movie__filter-check label {
+  font-size: 18px;
+}
+
+.movie__filter-year-title, .movie__filter-genre-title {
+  font-size: 25px;
+  margin-bottom: 15px;
+}
+
+.movie__filter-btn {
+  display: block;
+  margin: 0 auto;
+  padding: 5px 25px;
+  font-size: 22px;
+  font-weight: 600;
+  background-color: #FF424FFF;
+  box-shadow: 0 0 5px #222B31FF;
+  color: #fff;
+  border: none;
+  outline: none;
+}
+
 @keyframes loading-animation {
   0% {
     transform: scale(1) rotate(0);
@@ -328,4 +376,8 @@ h2 {
 
 .disable-btn {
   pointer-events: none;
+}
+
+.display-none {
+  display: none;
 }
