--- a/css/style.css
+++ b/css/style.css
@@ -167,8 +167,8 @@ h2 {
 
 .menu__divider {
   width: 90%;
-  height: 1px;
-  margin: 30px auto;
+  min-height: 1px;
+  margin: 12px auto;
   background-color: #777777;
 }
 
@@ -356,6 +356,87 @@ h2 {
   color: #fff;
   border: none;
   outline: none;
+}
+
+.movie-single-block {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 40px;
+}
+
+.movie-single__poster {
+  width: 400px;
+  height: 520px;
+  box-shadow: 0 0 20px #faa9a9;
+  z-index: 1;
+}
+
+.movie-single__poster-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.movie-single__info {
+  width: 700px;
+  height: 500px;
+  padding: 40px;
+  background-color: #191C1FFF;
+  box-shadow: 0 0 20px #191C1FFF;
+}
+
+.movie-single__title {
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+
+.movie-single__main-info {
+  border: 1px solid #fff;
+  border-right: 0;
+  border-left: 0;
+  padding: 20px 0;
+}
+
+.movie-single__ratings {
+  display: flex;
+  justify-content: space-between;
+}
+
+.movie-single__rating {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 120px;
+  padding: 10px;
+}
+
+.movie-single__rating-number {
+  font-size: 30px;
+  margin-bottom: 5px;
+}
+
+.movie-single__rating-name {
+  font-size: 20px;
+}
+
+.single-info {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.single-info__title {
+  width: 200px;
+  font-size: 25px;
+}
+
+.single-info__descr {
+  font-size: 20px;
 }
 
 @keyframes loading-animation {
