--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -79,8 +79,8 @@
       transition: 0.3s
   &__divider 
     width: 90%
-    height: 1px
-    margin: 30px auto
+    min-height: 1px
+    margin: 12px auto
     background-color: #777777
 
 
@@ -223,6 +223,65 @@
       border: none
       outline: none
 
+.movie-single 
+  &-block 
+    position: absolute
+    display: flex 
+    align-items: center
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    padding: 40px
+  &__poster 
+    width: 400px 
+    height: 520px
+    box-shadow: 0 0 20px #faa9a9
+    z-index: 1
+    &-img 
+      width: 100%
+      height: 100%
+      object-fit: cover
+  &__info 
+    width: 700px
+    height: 500px
+    padding: 40px
+    background-color: #191C1FFF
+    box-shadow: 0 0 20px #191C1FFF
+  &__title 
+    font-size: 40px
+    margin-bottom: 20px
+  &__main-info 
+    border: 1px solid #fff
+    border-right: 0
+    border-left: 0
+    padding: 20px 0
+  &__ratings 
+    display: flex
+    justify-content: space-between
+  &__rating 
+    display: flex
+    flex-direction: column 
+    align-items: center
+    width: 120px
+    padding: 10px
+    &-number  
+      font-size: 30px
+      margin-bottom: 5px
+    &-name 
+      font-size: 20px
+    
+.single-info 
+  display: flex
+  align-items: center 
+  margin-bottom: 10px
+  &__title
+    width: 200px
+    font-size: 25px
+  &__descr 
+    font-size: 20px
+
+
 
 @keyframes loading-animation
   0%
@@ -231,3 +290,5 @@
     transform: scale(1.3) rotate(180deg)
   100% 
     transform: scale(1) rotate(360deg)
+
+
