--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -148,6 +148,7 @@
         opacity: 1
         transition: 0.5s
     &-img
+      display: block
       width: 100%
       height: 100%
       object-fit: cover 
@@ -235,19 +236,19 @@
     padding: 40px
   &__poster 
     width: 400px 
-    height: 520px
     box-shadow: 0 0 20px #faa9a9
-    z-index: 1
+    z-index: 6
     &-img 
+      display: block
       width: 100%
       height: 100%
       object-fit: cover
   &__info 
     width: 700px
-    height: 500px
-    padding: 40px
+    padding: 20px 40px
     background-color: #191C1FFF
     box-shadow: 0 0 20px #191C1FFF
+    z-index: 5
   &__title 
     font-size: 40px
     margin-bottom: 20px
@@ -256,6 +257,7 @@
     border-right: 0
     border-left: 0
     padding: 20px 0
+    margin-bottom: 20px
   &__ratings 
     display: flex
     justify-content: space-between
@@ -263,20 +265,40 @@
     display: flex
     flex-direction: column 
     align-items: center
-    width: 120px
+    width: 200px
     padding: 10px
     &-number  
       font-size: 30px
       margin-bottom: 5px
     &-name 
       font-size: 20px
+      text-align: center
+  &__close
+    position: absolute
+    display: flex
+    align-items: center
+    justify-content: center
+    right: 30px
+    top: 30px
+    width: 40px 
+    height: 40px 
+    border-radius: 50%
+    background-color: #ffffff
+    font-size: 18px
+    cursor: pointer
+    box-shadow: 0 0 30px#191C1FFF
+    &-btn 
+      width: 50px
+      height: 50px
     
 .single-info 
   display: flex
   align-items: center 
-  margin-bottom: 10px
+  margin-bottom: 12px
+  &:last-child
+    margin-bottom: 0
   &__title
-    width: 200px
+    min-width: 200px
     font-size: 25px
   &__descr 
     font-size: 20px
