--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -89,8 +89,21 @@
   width: 1150px
   padding: 40px 20px 
   background-color: #222B31FF
-  &__title 
-    margin: 0 0 30px 35px 
+  &__header 
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin: 0 40px 20px
+  &__sort
+    display: flex
+    align-items: center
+    &-text 
+      margin-right: 10px
+      font-size: 20px
+    &-input 
+      padding: 3px 8px
+      font-size: 18px
+      option
   &__list 
     height: 870px
     padding: 20px 0
