--- a/css/style.css
+++ b/css/style.css
@@ -377,12 +377,20 @@ h2 {
   outline: none;
 }
 
-.movie-single-block {
+.movie-single__all-info {
   position: absolute;
-  display: flex;
-  align-items: center;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(43, 43, 43, 0.9);
+  z-index: 10;
+}
+
+.movie-single-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   padding: 40px;
@@ -483,6 +491,14 @@ h2 {
 
 .single-info__descr {
   font-size: 20px;
+}
+
+.load-page-btn {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
+  cursor: pointer;
 }
 
 @keyframes loading-animation {
