--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -238,12 +238,18 @@
       outline: none
 
 .movie-single 
-  &-block 
+  &__all-info 
     position: absolute
-    display: flex 
-    align-items: center
     top: 0
     left: 0
+    width: 100%
+    height: 100%
+    background-color: rgba(#2b2b2b, 0.9)
+    z-index: 10
+  &-block 
+    display: flex 
+    justify-content: center
+    align-items: center
     width: 100%
     height: 100%
     padding: 40px
@@ -316,7 +322,12 @@
   &__descr 
     font-size: 20px
 
-
+.load-page-btn 
+  position: absolute
+  width: 50px 
+  height: 50px
+  background-color: #fff
+  cursor: pointer
 
 @keyframes loading-animation
   0%
