--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ h2 {
 }
 
 .content__list {
-  height: 870px;
+  height: 810px;
   padding: 20px 0;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -472,6 +472,7 @@ h2 {
 .movie-single__close-btn {
   width: 50px;
   height: 50px;
+  pointer-events: none;
 }
 
 .single-info {
@@ -494,11 +495,18 @@ h2 {
 }
 
 .load-page-btn {
+  visibility: hidden;
   position: absolute;
-  width: 50px;
-  height: 50px;
-  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 15px;
+  bottom: 25px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #FF424FFF;
   cursor: pointer;
+  z-index: 10;
 }
 
 @keyframes loading-animation {
@@ -523,4 +531,8 @@ h2 {
 
 .display-none {
   display: none;
+}
+
+.visibile-btn {
+  visibility: visible;
 }
