--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -24,6 +24,7 @@
 
 .search 
   &-movie
+    position: relative
     display: flex
     align-items: center
   &-icon 
@@ -39,6 +40,54 @@
     font-size: 20px
     &::placeholder 
       color: #fff
+  &-info 
+    position: absolute
+    width: 400px 
+    max-height: 600px
+    right: 0
+    top: 45px
+    background-color: rgba(#191c1f, 0.9)
+    overflow-y: scroll
+    z-index: 10
+    &::-webkit-scrollbar
+      width: 5px
+      border-radius: 30px
+    &::-webkit-scrollbar-thumb
+      border-radius: 30px
+      background-color: #ff767f
+  &-reset 
+    position: absolute
+    display: flex
+    align-items: center
+    justify-content: center
+    right: 5px
+    width: 30px 
+    height: 30px
+    font-size: 23px
+    cursor: pointer
+
+.found-movie 
+  display: flex
+  align-items: center
+  padding: 20px
+  width: 100%
+  height: 100%
+  cursor: pointer
+  &__poster 
+    min-width: 160px
+    max-width: 160px
+    margin-right: 20px
+    &-img 
+      width: 100%
+      height: 100%
+      object-fit: cover
+  &__name 
+    font-size: 30px
+    margin-bottom: 10px
+    font-weight: 600
+  &__dir, &__genre 
+    font-size: 20px
+    margin-bottom: 10px
 
 .main 
   height: 990px
@@ -306,6 +355,7 @@
     font-size: 18px
     cursor: pointer
     box-shadow: 0 0 30px#191C1FFF
+    z-index: 10
     &-btn 
       width: 50px
       height: 50px
@@ -336,6 +386,7 @@
   background-color: #FF424FFF
   cursor: pointer
   z-index: 10
+
 
 @keyframes loading-animation
   0%
